--- a/homework/index.html
+++ b/homework/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="grid-container">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>  
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>  
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>  
+      <div class="grid-item box1"></div>
+      <div class="grid-item box2"></div>
+      <div class="grid-item box3"></div>
+      <div class="grid-item box4"></div>
+      <div class="grid-item box5"></div>
+      <div class="grid-item box6"></div>
+      <div class="grid-item box7"></div>
+      <div class="grid-item box8"></div>
+      <div class="grid-item box9"></div>
     </div>
-    <button>click</button>
-
-
-
+    <button id="click">click</button>
+    <button id="add">add</button>
+    <button id="changeBtn">change</button>
     <script src="./homework.js"></script>
-</body>
+  </body>
 </html>
